[gd_scene load_steps=20 format=2]

[ext_resource path="res://Pipes/Horizontal/PipeHorizontal.gd" type="Script" id=1]
[ext_resource path="res://Assets/cano/horizontal/canotestevertical.png" type="Texture" id=2]
[ext_resource path="res://Assets/cano/horizontal/canovert9.png" type="Texture" id=3]
[ext_resource path="res://Assets/cano/horizontal/canovert6.png" type="Texture" id=4]
[ext_resource path="res://UI/Buttons/128x128.png" type="Texture" id=5]
[ext_resource path="res://Assets/cano/horizontal/canovert10.png" type="Texture" id=6]
[ext_resource path="res://Assets/cano/horizontal/canovert7.png" type="Texture" id=7]
[ext_resource path="res://Assets/cano/horizontal/canovert3.png" type="Texture" id=8]
[ext_resource path="res://Assets/cano/horizontal/canovert1.png" type="Texture" id=9]
[ext_resource path="res://Assets/cano/horizontal/canovert4.png" type="Texture" id=10]
[ext_resource path="res://Assets/cano/horizontal/canovert5.png" type="Texture" id=11]
[ext_resource path="res://Assets/cano/horizontal/canovert2.png" type="Texture" id=12]
[ext_resource path="res://Assets/cano/horizontal/canovert8.png" type="Texture" id=13]
[ext_resource path="res://Assets/cano/horizontal/direita/canohori10.png" type="Texture" id=14]
[ext_resource path="res://Assets/cano/horizontal/direita/canotestehori.png" type="Texture" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 16 )

[sub_resource type="Animation" id=3]
resource_name = "WaterLeft"
tracks/0/type = "value"
tracks/0/path = NodePath("PipeBody:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 13 ), ExtResource( 3 ), ExtResource( 6 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("PipeBody:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 15 ), ExtResource( 14 ) ]
}

[node name="PipeHorizontal" type="Node2D"]
script = ExtResource( 1 )

[node name="Left" type="Area2D" parent="."]
position = Vector2( -64, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
shape = SubResource( 1 )

[node name="RayLeft" type="RayCast2D" parent="Left"]
enabled = true
cast_to = Vector2( -16, 0 )
collide_with_areas = true
collide_with_bodies = false

[node name="Right" type="Area2D" parent="."]
position = Vector2( 64, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
shape = SubResource( 2 )

[node name="RayRight" type="RayCast2D" parent="Right"]
enabled = true
cast_to = Vector2( 16, 0 )
collide_with_areas = true
collide_with_bodies = false

[node name="PipeBody" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/WaterLeft = SubResource( 3 )
anims/WaterRight = SubResource( 4 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( -64, -64 )
normal = ExtResource( 5 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
